--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,10 +124,10 @@ footer {
   background-color: green;
   display: inline-block;
   text-align: center;
-  padding: 15px;
-  margin: 5px;
+  padding: 10px;
+  margin: 6px;
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: 9px;
 }
 .sign-nav ul li:hover {
   background-color: rgb(99, 146, 6);
@@ -247,10 +247,10 @@ h5{
 }
 
 
-@media only screen and (max-width: 40em) {
+@media only screen and (max-width: 600px) {
     /*home page*/
   .sign a {
-    margin-left: 2vw;
+    margin-left: -5vw;
 
     color: white;
     text-decoration: none;
@@ -265,7 +265,7 @@ h5{
   }
   .image-header {
     width: 100%;
-    height: 10vh;
+    height: 25vh;
     background-image: url("../image/pizza01.jpg");
     background-size: cover;
     overflow: hidden;
@@ -273,7 +273,7 @@ h5{
 
   .image-header img {
     border-radius: 100%;
-    width: 150px;
+    width: 100px;
     margin-left: 2vw;
     margin-top: 3vw;
   }
@@ -318,11 +318,13 @@ h5{
     margin-right: 50px;
   }
   .sign-ul{
-    margin-top: -3rem;
+    margin-top: -5vw;
+  
   }
   .sign-sec{
     margin-top: 40vw;
-    width: 50%
+    margin-left: 10vw;
+    width: 80%;
   }
   .main-sec{
       grid-template-columns: auto;
